$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2012

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:

MBDyn 1.5.2
	Enhancements:
		- added AfterPredict & Restart to module-octave
		  (Reinhard Resch)
		- added inverse square constitutive law
	Backward compatibility issues:
		- "index" form for priv data is deprecated
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix restart bug (Reinhard Resch)
		- fix initialization issues (Marco Morandini)
		- fix dist of mbc_py_interface.py (noted by Gaël Ecorchard)

MBDyn 1.5.1
	Enhancements:
		- added "ifndef" declaration modifier for var redefinition
		- added module-nodedistdrive (Reinhold Resch)
	Backward compatibility issues:
		- moved GRAALL damper to module-damper-graall
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix build when sched_setaffinity() is unavailable
		- fix file name handling in windows (mingw)

MBDyn 1.5.0
	Enhancements:
		- added displacement-only nodes and selected basic elements
		- added membrane element (Marco Morandini & Tommaso Solcia)
		- added continuous contact constitutive law (Matteo Fancello)
		- added inverse dynamics body for weight tailoring
		- added "other" specifier to total pin joint input
		- added dof stats output to file (Reinhard Resch)